<resources>
    <string name="app_name">ChicagoVoter</string>
    <string name="current_events_string"><font size="25">Candidates/Current Events</font>\n\n<font size="12">Find information about political events near you. Learn more about active candidates</font></string>
    <string name="voter_information_string"><font size="25">Voter Information</font>\n\n<font size="12">Find out if you are eligible to vote and where you can go vote</font></string>
    <string name="my_reps_string"> <font size="25">My Representatives</font>\n\n<font size="12">Find more information on who your local officials are</font></string>
    <string name="home_desc">The home screen icon indicates that the user is currently in the home activity</string>
    <string name="app_title"><b>Chicago Voter</b></string>
    <string name="settings_string"><b>Settings</b></string>
    <string name="representatives_string"><b>Representatives</b></string>
    <string name="current_events"><b>Candidates/Current Events</b></string>
    <string name="Test"><b>THIS IS A TEST1</b></string>
    <string name="Notifications">Notifications</string>
    <string name="Switch">Allow Push Notifications</string>
    <string name="Accessibility">Accessibility</string>
    <string name="ChangeToSpan" translatable="false">Cambia al Español</string>
    <string name="ChangeToEng" translatable="false">Change to English</string>
    <string name="TextSize">Change Text Size</string>
    <string name="autofill_rep_text">find representative</string>
    <string name="VoterInfo"> <b>Voter Information </b> </string>
    <string name="nameView">Name:</string>
    <string name="EnterName">Enter your name</string>
    <string name="addressView">Let\'s start with your Address:</string>
    <string name="EnterAddress">Enter your address</string>
    <string name="citizenShipView">What is your current citizenship status?</string>
    <string name="felonyView">Have you ever been convicted of a felony?</string>
    <string name="YesButton">Yes</string>
    <string name="NoButton">No</string>
    <string name="livedInChicagoView">Have you lived in the city of Chicago for atleast 30 days?</string>
    <string name="q2YesButton">Yes</string>
    <string name="q2NoButton">No</string>
    <string name="eligibleView">Your eligibility will display here.</string>
    <string name="pollingStationTextView">The nearest Polling Station.</string>
    <string name="goToMapsView">Open maps</string>
    <string name="Citizen">U.S Citizen</string>
    <string name="GreenCard">Green Card Holder</string>
    <string name="Undoc">Undocumented</string>
    <string name="SubmitBTN">Submit</string>
    <string name="nextButton">Continue</string>
    <string name="step1">Step 1:</string>
    <string name="step2">Step 2:</string>
    <string name="results">Results:</string>
    <string name="eligibleToVote">Are you Eligible to Vote?</string>
    <string name="pollingStation">Your nearest Polling Station is:</string>
    <string name="CanVote"> YES! You are eligible to Vote!</string>
    <string name="CantVote"> NO! You are NOT eligible to Vote!</string>
    <string name="END">Return to Home Page</string>
    <string-array name="pollingLocation">
        <item>2242 S Damen Ave, Chicago, IL 60608</item>
        <item>1895 S Loomis St, Chicago, IL 60608</item>
        <item>1354 S Morgan St, Chicago, IL 60608</item>
        <item>1826 N Francisco Ave, Chicago IL, 60608</item>
        <item>1148 N Honore St, Chicago IL, 60608 </item>
        <item>2150 N California Ave, Chicago IL, 60608</item>
        <item>2451 N Sacramento Ave, Chicago IL, 60608</item>
        <item>2010 N Central Park Ave, Chicago IL, 60608</item>
        <item>2367 W Logan Bv, Chicago IL, 60608</item>
        <item>838 N Noble St, Chicago IL, 60608</item>
    </string-array>
    <string name="election_text"><font size="20">Next Election:</font> <font size="25"><b>3 Days</b></font></string>
    <string name="events_tab_button">Events</string>
    <string name="candidates_tab_button">Candidates</string>
    <string-array name="rep_names">
        <item>Jesus Garcia</item>
        <item>Robin Kelly</item>
        <item>Edward M. Burke</item>
        <item>Roberto Maldonado</item>
        <item>Rahm Emanuel</item>
        <item>Brian Hopkins</item>
        <item>Pat Dowell</item>
        <item>Sophia King</item>
    </string-array>
    <string-array name="office_name">
        <item>US representative</item>
        <item>US representative</item>
        <item>Alderman</item>
        <item>Alderman</item>
        <item>Mayor</item>
        <item>Alderman</item>
        <item>Alderman</item>
        <item>Alderman</item>
    </string-array>
    <string-array name="political_party">
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
        <item>Politcal Affiliation: Democrat</item>
    </string-array>
    <string-array name="website">
        <item>Website: chuygarcia.house.gov</item>
        <item>Website: robinkelly.house.gov</item>
        <item>Website: edwardburke2019.com</item>
        <item>Website: robertomaldonado.com</item>
        <item>Website: chicago.gov/city/en/depts/mayor.html</item>
        <item>Website: aldermanhopkins.com</item>
        <item>Website: citizensforpatdowell.com</item>
        <item>Website: aldsophiaking.com</item>
    </string-array>
    <string-array name="email">
        <item>Email: press@chuygarcia.org</item>
        <item>Email: NA</item>
        <item>Email: ward14@cityofchicago.org</item>
        <item>Email: ward26@cityofchicago.org</item>
        <item>Email: NA</item>
        <item>Email: ward02@cityofchicago.org</item>
        <item>Email: ward03@cityofchicago.org</item>
        <item>Email: ward04@cityofchicago.org</item>
    </string-array>
    <string-array name="phone_numer">
        <item>Phone: (773) 342-0774</item>
        <item>Phone: (708) 679-0078</item>
        <item>Phone: (773) 471-1414</item>
        <item>Phone: (773) 395-0143</item>
        <item>Phone: NA</item>
        <item>Phone: (312) 643-2299</item>
        <item>Phone: (773) 373-9273</item>
        <item>Phone: (773) 536-8103</item>
    </string-array>
    <string-array name="is_running_again">
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
        <item>Is Running?: Yes</item>
    </string-array>
    <string-array name="event_name">
        <item>Chicago Mayoral Forum</item>
        <item>2020 Presidential Candidate: Julián Castro</item>
        <item>TRUMP 2020 GALA</item>
        <item>It"'"s a Runoff in the 5th Ward</item>
        <item>GOTV Flyering in Pilsen</item>
    </string-array>
    <string-array name="event_date">
        <item>Fri, March 29, 2019, 6:00 PM – 7:00 PM</item>
        <item>Tue, April 16, 2019, 5:30 PM – 6:45 PM</item>
        <item>Sat, July 6, 2019, 6:00 PM – 11:30 PM</item>
        <item>Sat, March 30, 2019, 11:00 AM – 12:30 PM</item>
        <item>Friday March 29 5-7 pm</item>
    </string-array>
    <string-array name="event_location">
        <item>9501 S. King Drive, Chicago, IL 60628</item>
        <item>1212 E 59th St, Chicago, IL 60637</item>
        <item>401 North Wabash Avenue, Chicago, IL 60611</item>
        <item>1818 E. 71st Street, 202, CHICAGO, IL 60649-1913</item>
        <item>1504 W 18th St</item>
    </string-array>
    <string-array name="description_events">
        <item>Join us for a one-hour, live broadcast mayoral debate from Chicago State University. The format will be a two-candidate, moderated round table with audience participation.</item>
        <item>Join the IOP as we welcome Democratic presidential candidate Julián Castro, former U.S. Secretary of Housing and Urban Development, for a wide-ranging conversation on the future of American politics, the Democratic Party, and more.</item>
        <item>Please join us to celebrate the upcoming Campaign to re-elect President Trump at our Trump 2020 GALA at the Trump International Hotel in Chicago for a night to remember. You wont want to miss this.</item>
        <item>With the Obama Presidential Center and Tiger Woods Golf course without a Community Benefits Agreement, the race for Alderman in 5th Ward has brought South Shore front and center. What"'"s at stake? Who should you vote for? What"'"s In it for South Shore? What are the candidate"'"s position on a CBA, vision for economic development, and public safety?</item>
        <item>Flyering for Lori Lightfoot</item>
    </string-array>
    <string-array name="event_websites">
        <item>https://www.eventbrite.com/e/chicago-mayoral-forum-tickets-58735393142#</item>
        <item>https://www.eventbrite.com/e/2020-presidential-candidate-julian-castro-registration-58871757010#</item>
        <item>https://www.eventbrite.com/e/trump-2020-gala-tickets-59571848001</item>
        <item>https://www.eventbrite.com/e/its-a-runoff-in-the-5th-ward-tickets-58451396701#</item>
        <item>https://www.eventbrite.com/e/pilsen-alliance-20th-year-anniversary-celebration-unity-is-key-tickets-52764756808#</item>
    </string-array>
    <string-array name="candidate_names">
        <item>Alexander Acevedo</item>
        <item>Byron Sigcho Lopez</item>
        <item>Melissa Conyears-Ervin</item>
        <item>Ameya Pawar</item>
        <item>Toni Preckwinkle</item>
        <item>Lori Lightfoot</item>
    </string-array>
    <string-array name="running_for_office">
        <item>Running For: Alderman</item>
        <item>Running For: Alderman</item>
        <item>Running For: Treasurer</item>
        <item>Running For: Treasurer</item>
        <item>Running For: Mayor</item>
        <item>Running For: Mayor</item>
    </string-array>
    <string-array name="candidate_political_party">
        <item>Politcal Affiliation: No Party</item>
        <item>Politcal Affiliation: No Party</item>
        <item>Politcal Affiliation: No Party</item>
        <item>Politcal Affiliation: No Party</item>
        <item>Politcal Affiliation: No Party</item>
        <item>Politcal Affiliation: No Party</item>
    </string-array>
    <string-array name="candidate_contact_info">
        <item>Contact Info: nick@alexfor25.com</item>
        <item>Contact Info: teamsigcho@gmail.com</item>
        <item>Contact Info: conyearservin.com/contact-us-2</item>
        <item>Contact Info: info@chicago47.org</item>
        <item>Contact Info: press@toniforchicago.com</item>
        <item>Contact Info: info@lightfootforchicago.com</item>
    </string-array>
    <string-array name="candidate_website">
        <item>Website: alexfor25.com</item>
        <item>Website: sigchofor25.com/</item>
        <item>Website: conyearservin.com/</item>
        <item>Website: chicago47.org/</item>
        <item>Website: toniforchicago.com/</item>
        <item>Website: lightfootforchicago.com/</item>
    </string-array>
    <string-array name="candidate_click_web">
        <item>http://alexfor25.com/</item>
        <item>http://sigchofor25.com/</item>
        <item>http://conyearservin.com/</item>
        <item>http://chicago47.org/</item>
        <item>http://toniforchicago.com/</item>
        <item>http://lightfootforchicago.com/</item>
    </string-array>
</resources>