<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VoterInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8BC34A"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@android:drawable/ic_media_previous"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/VoterInfo" />

    <TextView
        android:id="@+id/step1TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:textColor="#09030A"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="200dp"

        />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addressView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#060916"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/enterAddressEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/EnterAddress"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/nextButton"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:textColor="#020103"
        android:layout_marginTop="25dp"/>


</LinearLayout>