<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/action_bar_color">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:layout_margin="10dp"
            android:contentDescription="@string/home_desc"
            />

    </android.support.v7.widget.Toolbar>

    <Button style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/current_events_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/current_events_string" />

    <Button style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/voter_information_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/voter_information_string" />

    <Button style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/my_representatives_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/my_reps_string" />

</LinearLayout>