<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CurrentEventsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/curr_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8BC34A"
        android:elevation="4dp"
        android:gravity="center_vertical|start"
        app:navigationIcon="@android:drawable/ic_media_previous"
        app:title="@string/current_events" />

    <EditText
        android:id="@+id/current_events_edittext"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/resizer"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="" />

    <TextView
        android:id="@+id/next_election_banner"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="#79C8F0"
        android:paddingLeft="70dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/election_text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/candidates_button"
            style="@style/candidateTheme.Button"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/candidates_tab_button"
            android:textColor="#16040A" />

        <Button
            android:id="@+id/events_button"
            style="@style/candidateTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/events_tab_button"
            android:textColor="#0B0613" />

    </LinearLayout>

    <ListView
        android:id="@+id/current_events_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>